[package]
name = "Rust101"
version = "0.1.0"
edition = "2024"
default-run = "server"

[lib]
name = "rust101"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4.1"
bytes = "1.11.0"
csv = "1.4.0"
actix-web = "4.12.0"
serde = { version = "1.0.228", features = ["derive"] }
dotenv = "0.15.0"
toon = "0.1.2"
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
sled= "0.34.7"


[dev-dependencies]
reqwest = "0.12.24"

# Binary targets - each example can be run separately
[[bin]]
name = "01_tokio_async_await_basics"
path = "src/01_tokio_async_await_basics.rs"

[[bin]]
name = "02_tokio_spawn_concurrent_tasks"
path = "src/02_tokio_spawn_concurrent_tasks.rs"

[[bin]]
name = "03_tokio_mpsc_channel_communication"
path = "src/03_tokio_mpsc_channel_communication.rs"

[[bin]]
name = "04_tokio_file_read_async"
path = "src/04_tokio_file_read_async.rs"

[[bin]]
name = "05_csv_reader_basic"
path = "src/05_csv_reader_basic.rs"

[[bin]]
name = "06_csv_deserialize_with_serde"
path = "src/06_csv_deserialize_with_serde.rs"

[[bin]]
name = "07_mini_redis_client_operations"
path = "src/07_mini_redis_client_operations.rs"

[[bin]]
name = "08_mini_redis_actor_pattern"
path = "src/08_mini_redis_actor_pattern.rs"

[[bin]]
name = "server"
path = "src/09_create_http_server.rs"

[[bin]]
name = "10_env_var"
path = "src/10_env_var.rs"

[[bin]]
name = "blockchain101"
path = "src/blockchain/blockchain101.rs"

[[bin]]
name = "blockchain102"
path = "src/blockchain/blockchain102.rs"

[[bin]]
name = "blockchain103"
path = "src/blockchain/blockchain103.rs"

[[bin]]
name = "blockchain104"
path = "src/blockchain/blockchain104.rs"

[[bin]]
name = "20_database101"
path = "src/20_database101.rs"

[[bin]]
name = "sled_db_example"
path = "src/blockchain/sled_db_example.rs"


[build-dependencies]
dotenv = "0.15.0"
